--- a/Pet Shop/styles.css
+++ b/Pet Shop/styles.css
@@ -1,8 +1,105 @@
-.custom-shape-divider-top-1656692470 {
+*,*::before,*::after{
+    margin:  0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Montserrat' sans-serif;
+}
+
+.container{
+    max-width: 1140px;
+    margin:  0 auto;
+}
+.row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.col{
+    display: flex;
+    flex-direction: column;
+}
+img{
+    max-width: 100%;
+}
+.header{
+    position: relative;
+    width: 100%;
+    height: 80vh;
+
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav ul{
+    display: flex;
+}
+.nav__link{
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    letter-spacing: .15px;
+    font-family: 'Montserrat';
+}
+
+li{
+    list-style: none;
+}
+
+
+li+li{
+    margin-left: 1em;
+}
+h1{
+    font-size: 5rem;
+}
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
+    padding: 0;
+}
+#header-shape-gradient {
+  --color-stop: #FF6752;
+  --color-bot: #FD6845;
+}
+
+.custom-shape-divider-top-1656704314 {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: -1;
     overflow: hidden;
     line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1656704314 svg {
+    position: relative;
+    display: block;
+    width: calc(150% + 1.3px);
+    height:100vh;
+    transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1656704314 .shape-fill {
+    
+    fill: url(#header-shape-gradient) #fff;
+}
+.header__content{
+    width: 100%;
+    text-align: left;
+    color: #ffffff;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2em;
+}
+
+.header__content p{
+    width: 70%;
+    font-size: 1.275rem;
+    line-height: 1.7;
 }
