--- a/Pet Shop/styles.css
+++ b/Pet Shop/styles.css
@@ -161,6 +161,9 @@ h1,h2,h3,h4,h5,h6,p{
     padding: 5em 0;
     margin: 0;
 }
+.ourServices{
+    padding: 2em;
+}
 .services__content h2{
     font-size: 2.4rem;
     letter-spacing: .35px;
@@ -192,6 +195,7 @@ h1,h2,h3,h4,h5,h6,p{
     box-shadow: 0px 3px 8px rgba(0,0,0,.15);
     place-items: center;
     width: 60%;
+    text-align: center;
     z-index: 2;
     
 }
@@ -216,7 +220,7 @@ h1,h2,h3,h4,h5,h6,p{
     position: relative;
     display: block;
     width: calc(176% + 1.3px);
-    height: 382px;
+    height: 25vh;
     transform: rotateY(180deg);
 }
 #header-shape-gradient {
@@ -235,7 +239,20 @@ h1,h2,h3,h4,h5,h6,p{
     }
     .header__content p{
         width: 100%;
-
+    }
+    .ourServices{
+        flex-direction: column;
+        text-align: center;
+    }
+    .services__content p{
+        width: 100%;
+        margin-bottom: 2em;
+    }
+    .services{
+        width: 80%;
+    }
+    .services__content h2{
+        font-size: 2rem;
     }
 }
 
@@ -305,6 +322,14 @@ h1,h2,h3,h4,h5,h6,p{
     .btn__call{
         font-size: .8rem;
     }
+    .services__content h2{
+        font-size: 1.8rem;
+    }
+    .services__content p{
+        font-size: 1rem;
+        width: 75%;
+        margin: 1em auto 2em;
+    }
 }
 
 @media (max-width:680px) {
@@ -331,5 +356,17 @@ h1,h2,h3,h4,h5,h6,p{
     .header__btns{
         flex-direction: column;
     }
-
+    .service__row{
+        flex-direction: column;
+    }
+    .service__row + .service__row{
+        margin-top: 0;
+    }
+    .service__card + .service__card{
+        margin-left: 0;
+margin: 2em 0;
+    }
+    .service__card h4{
+        font-size: 1rem;
+    }
 }
